[project]
name = "follow-ak"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "takumiyoshikawa", email = "happyriver157@gmail.com" }
]
dependencies = [
    "micrograd>=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/follow_ak"]
